# stream-processor

./: Cargo.toml  README.md
.github/workflows/: CI.yaml  ci.yml
scripts/: kafka.yml
src/: error.rs  intake.rs  kafka.rs  lib.rs  processor.rs  settings.rs
tests/: integration_tests.rs
