[package]
name = "stream-processor"
version = "0.1.0"
authors = ["Sebastian Rollen <seb@overmu.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.48"
futures = "0.3"
kafka-settings = { git = "ssh://git@github.com/Overmuse/kafka-settings", tag = "v0.1.0" }
rdkafka = { version = "0.26", features = ["ssl-vendored"] }
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"

[dev-dependencies]
anyhow = "1.0.40"
tokio = { version = "1.4", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "0.2"
